@@ -10,17 +10,17 @@
 #include "ace/config-all.h"
 
 #if defined (TAO_AS_STATIC_LIBS)
-#  if !defined (TAO_HAS_DLL)
-#    define TAO_HAS_DLL 0
-#  endif /* ! TAO_HAS_DLL */
+#  if !defined (TAO_CODESET_HAS_DLL)
+#    define TAO_CODESET_HAS_DLL 0
+#  endif /* ! TAO_CODESET_HAS_DLL */
 #else
-#  if !defined (TAO_HAS_DLL)
-#    define TAO_HAS_DLL 1
-#  endif /* ! TAO_HAS_DLL */
+#  if !defined (TAO_CODESET_HAS_DLL)
+#    define TAO_CODESET_HAS_DLL 1
+#  endif /* ! TAO_CODESET_HAS_DLL */
 #endif
 
-#if defined (TAO_HAS_DLL) && (TAO_HAS_DLL == 1)
-#  if defined (TAO_BUILD_DLL)
+#if defined (TAO_CODESET_HAS_DLL) && (TAO_CODESET_HAS_DLL == 1)
+#  if defined (TAO_CODESET_BUILD_DLL)
 #    define TAO_Codeset_Export ACE_Proper_Export_Flag
 #    define TAO_SINGLETON_DECLARATION(T) ACE_EXPORT_SINGLETON_DECLARATION (T)
 #    define TAO_SINGLETON_DECLARE(SINGLETON_TYPE, CLASS, LOCK) ACE_EXPORT_SINGLETON_DECLARE(SINGLETON_TYPE, CLASS, LOCK)
