@@ -1,3 +1,13 @@
+Thu Jul 14 08:11:27 2005  Phil Mesnier  <mesnier_p@ociweb.com>
+
+        * tao/Codeset/codeset_export.h:
+        * tao/Codeset/Codeset_Manager_i.cpp:
+        * tao/Codeset/UTF16_BOM_Factory.cpp:
+        * tao/Codeset/UTF8_Latin1_Factory.cpp:
+        * tao/Codeset/UTF8_Latin1_Translator.cpp:
+
+          Fixed more platform-specific errors.
+
 Thu Jul 14 08:59:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tao/ORB_Core.i:
